--- a/3thAnniversary.html
+++ b/3thAnniversary.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header1 cid-rx90TWNRI0" id="header16-16">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rx90TWNRI0" id="header16-16">
 
     
 
@@ -83,15 +83,11 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    FULL WIDTH INTRO
-                </h1>
-                
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Full width intro with adjustable height, background image and a color overlay. Click any text to edit or style it.
-                </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">LEARN MORE</a>
-                </div>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">13th Church Anniversary</h1>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">
+                    COME AND BE BLESSED</h3>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">CELEBRATES WITH ON OUR 13TH SYDNEY LOCALE CHURCH ANNIVERSARY</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">LEARN MORE<br></a></div>
             </div>
         </div>
     </div>
@@ -116,7 +112,7 @@
         <div class="hoursCountdown" title="Hours"></div> 
         <div class="minutesCountdown" title="Minutes"></div> 
         <div class="secondsCountdown" title="Seconds"></div>
-        <div class="countdown pt-5 mt-2" data-due-date="2018/01/01"> 
+        <div class="countdown pt-5 mt-2" data-due-date="2019/08/11"> 
         </div>
     </div>
 </section>
@@ -235,7 +231,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hU+zXsTgky3e6jb0JH13OZQcBw+7ZV2I7s2Xk2lIHfgfDyON+bw89v7WojgTLwsSxEannfkwb4SquS9FH1vR13uJEVlEHA1XrOKRUrTRaY5roeGDaM7y6KM2y6hj2kwW">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iA1O7lkG12KAjiI5a0FB0UzB90LrLpbcSAKFlvYxV70i4yRY30sfor/WPOMUcO/vSC4um6ArgJc3aURF5/KhbtNmWRZ8Y+AuHD5ki98teJwKfzqdI79ntqYXCUQvNIVw">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
