create github pages

--- a/3thAnniversary.html
+++ b/3thAnniversary.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-rx90TWNRI0" id="header16-16">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header1 cid-rx90TWNRI0" id="header16-16">
 
     
 
@@ -80,7 +80,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">13th Church Anniversary</h1>
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">
                     COME AND BE BLESSED</h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">CELEBRATES WITH ON OUR 13TH SYDNEY LOCALE CHURCH ANNIVERSARY</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">CELEBRATES WITH US ON OUR 13TH SYDNEY LOCALE CHURCH ANNIVERSARY</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://mobirise.co">LEARN MORE<br></a></div>
             </div>
         </div>
@@ -118,8 +118,7 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">
-            Images with different flip animations
-        </h2>
+            SOME OF OUR PREVIOUS EVENT PHOTOS</h2>
         <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style">
             Click on the bottom left corner of the card to change the front image. In browser this corner will not be shown.
         </h3>
@@ -224,7 +223,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WC8mjd7Oio5Nafh5Dsk4E/oeljjfqbjWC0A2An9LKD5KLT8+bxKg6WhT/ZhK8XBfsUfVsD0SPARCGyblfkk9mCynqkRA2gwbgS7ve1cVOQWnDNt/ersf//XJ6KfW5tlL">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VpSh04yPsp/7FpoG8lWW6FvmGAxzdTDvFD7sKalKmDhUALiEXtQb2WJMbgg0EJvqjmsaUgPyYHSimaXhWwfUeChgoipQ+vvL8tIe8Z9Egr/abN+FVe0hqdYLY6bS5Sw/">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
