--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="http://www.pmcc4w.org" target="_blank">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Main</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="http://www.pmcc4w.org" target="_blank">
@@ -68,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
