create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">CHILLERS</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        LOCATED IN LEVEL-2 PLANT ROOM</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -57,7 +57,7 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                        LOCATED IN LEVEL-2 PLANT ROOM
                     </p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -74,7 +74,7 @@
                     <p class="mbr-text mbr-fonts-style display-7">
                        LOCATED IN LEVEL-2 PLANT ROOM
                     </p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -85,7 +85,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="features8 cid-rWovw8DHa1 mbr-parallax-background" id="features8-31">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="features8 cid-rWovw8DHa1 mbr-parallax-background" id="features8-31">
 
     
 
