create github pages

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <span class="mbri-desktop mbr-iconfont"></span>
                 </div>
                 <div class="card-box align-center">
-                    <h4 class="card-title mbr-fonts-style display-7">CHILLERS</h4>
+                    <h4 class="card-title mbr-fonts-style display-7">CH-1 , CH2 &amp; CH3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM</p>
+                       MAIN CHILLED WATER SYSTEM LOCATED IN LEVEL-2 PLANT ROOM</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -51,11 +51,9 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">
-                        CHILLERS
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM
-                    </p>
+                        CHWP-RS.1 , RS.2 &amp; RS.3</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH-END CHW SYSTEM 
+<br>LOCATED IN LEVEL-2 PLANT ROOM</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -84,7 +82,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
@@ -100,7 +98,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">CHILLERS</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM</p>
+                       MAIN CHILLED WATER SYSTEM LOCATED IN LEVEL-2 PLANT ROOM</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -112,12 +110,8 @@
                     <span class="mbri-touch mbr-iconfont"></span>
                 </div>
                 <div class="card-box align-center">
-                    <h4 class="card-title mbr-fonts-style display-7">
-                        CHILLERS
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM
-                    </p>
+                    <h4 class="card-title mbr-fonts-style display-7">CHWP-P.1 ,P.2 &amp; P.3</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH-END CHW SYSTEM <br>LOCATED IN LEVEL-2 PLANT ROOM</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
