create github pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">CH-1 , CH2 &amp; CH3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       MAIN CHILLED WATER SYSTEM LOCATED IN LEVEL-2 PLANT ROOM</p>
+                       MAIN CHILLED WATER SYSTEM LOCATED IN L2 PLANT RM.</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -53,7 +53,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         CHWP-RS.1 , RS.2 &amp; RS.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH-END CHW SYSTEM 
-<br>LOCATED IN LEVEL-2 PLANT ROOM</p>
+<br>LOCATED IN L2 PLANT RM.</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -67,7 +67,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">CHWP-RS.4 , RS.5 &amp; RS.6</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL SOUTH-END CHW SYSTEM 
-<br>LOCATED IN LEVEL-2 PLANT ROOM</p>
+<br>LOCATED IN L2 PLANT RM.</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
@@ -95,7 +95,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">HWU-B.1 &amp; B.2</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       MAIN HEATING WATER UNITS LOCATED IN LEVEL-2 PLANT ROOM</p>
+                       MAIN HEATING WATER UNITS LOCATED IN L2 PLANT RM.</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
