create github pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
@@ -108,7 +108,7 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">HHWP-P.1 ,P.2 &amp; P.3</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH &amp; SOUTH ENDS HW SYSTEM<br>LOCATED IN LEVEL-2 PLANT ROOM</p>
+                    <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH &amp; SOUTH ENDS HW PUMPS SYSTEM<br>LOCATED IN L2 PLANT RM.</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -121,12 +121,9 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">
-                        CHILLERS
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM
-                    </p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
+                        DWHS-RESIDENTIAL</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM RESIDENTIAL<br>LOCATED IN L2 PLANT RM.</p>
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34UcJLX" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
